<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cslam_storage</name>
  <version>0.0.0</version>
  <description>This package allow us to store the map as pcd and json files in the robots or in the base station</description>
  <maintainer email="romanroman2705@gmail.com">romantwice</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  
  <build_depend>cslam_common_interfaces</build_depend>
  
  <exec_depend>cslam_common_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
